Fixed issue of footer not visible on some screens.

--- a/src/containers/style.css
+++ b/src/containers/style.css
@@ -16,7 +16,6 @@ html {
 body {
      position: relative;
      margin: 0;
-     padding-bottom: 6rem;
      min-height: 100%;
      font-family: "Helvetica Neue", Arial, sans-serif;
 }
@@ -204,10 +203,10 @@ body {
 /* Sticky footer style and color
 -------------------------------------------------- */
 footer {
-	position: absolute;
 	right: 0;
   bottom: 0;
   left: 0;
+  padding-top: 6px;
   background-color: #292c2f;
   color: #bbb;
 }
@@ -402,11 +401,6 @@ footer, footer > div.container {
 		font-weight: 900;
 }
 
-.container-margin {
-		margin-top: 55px;
-		margin-bottom: 200px;
-}
-
 .movie-cards {
 		box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -474,7 +468,6 @@ footer, footer > div.container {
 
 .movie_single {
 		background-color: #020d18;
-		padding: 100px 0;
 		display: inline-block;
 		width: 100%;
 		margin-bottom: -10px;
